--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,7 @@
   <!--https://github.com/jharding/typeahead.js-bootstrap.css--> 
   	<link rel="stylesheet" type="text/css" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <link rel="stylesheet" type="text/css" href="css/table.css" />
+    <link rel="stylesheet" type="text/css" href="css/app.css" />
 
     <!--[if lte IE 8]>
         <link href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" rel="stylesheet" type="text/css">
@@ -138,7 +139,6 @@
       padding: 1px 20px;
       box-shadow: 10px 10px 65px 0px rgba(0, 0, 0, 0.75);
       }
-
       p.content-one {
       color: white;
       }
@@ -146,7 +146,6 @@
       a.one {
       color:white;
       }
-
       .left { float:left; width:50%; clear:left; }
       .right { float:right; width:50%; clear:right;list-style-type: none; }
 
@@ -166,10 +165,10 @@
       cursor: pointer;
       }
 
-    #layer_selector li.selected {
-      background-color: #EEE;
-      font-weight: bold;
-    }
+      #layer_selector li.selected {
+        background-color: #EEE;
+        font-weight: bold;
+      }
     </style>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -241,13 +240,14 @@
  <div class="row" id="container">
 		
         <div class="col-sm-12 col-lg-12" id="map"></div>	
-       <div id="legendBox"></div>	
-			   <div id="DBox2">
-			   <p class="expand-one"><a class="one" href="#"><strong>About this Map</strong></a> </p>
+        <div id="legendBox"></div>	
+			  <div id="DBox2">
+			   <p class="expand-one"><a class="one" href="#"><strong>About this Map</strong></a> 
+         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button></p>
 			   <p class="content-one">This map symbolizes total CyclePhilly trips by facility from May, 2014 through April, 2016<br> (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
 
          <!-- Round 1(6 months; 8,340 individual trips by 220 unique CyclePhilly users). -->
-			   </div>	
+		   </div>	
  
 			 
     </div>
@@ -456,7 +456,6 @@
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-  
     <script type="text/javascript" src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>  
   <!--   <script src='http://api.tiles.mapbox.com/mapbox.js/v1.2.0/mapbox.standalone.js'></script> -->
 		
