--- a/index.htm
+++ b/index.htm
@@ -242,9 +242,8 @@
         <div class="col-sm-12 col-lg-12" id="map"></div>	
         <div id="legendBox"></div>	
 			  <div id="DBox2">
-			   <p class="expand-one"><a class="one" href="#"><strong>About this Map</strong></a> 
-         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button></p>
-			   <p class="content-one">This map symbolizes total CyclePhilly trips by facility from May, 2014 through April, 2016<br> (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
+			  <div class="expand-one"><i class="glyphicon glyphicon-minus"></i>&nbsp;&nbsp;About this Map</div> 
+			   <p class="content-one" >This map symbolizes total CyclePhilly trips by facility from May, 2014 through April, 2016<br> (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
 
          <!-- Round 1(6 months; 8,340 individual trips by 220 unique CyclePhilly users). -->
 		   </div>	
