--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
         }
         body {
             padding-top: 50px;
-            overflow-y:hidden;
+            overflow:hidden;
         }
         label {
             font-weight: normal;
@@ -83,10 +83,24 @@
             .leaflet-control-attribution {
                 display: none;
             }
+            #subheader{
+              display: none;
+            }
+             #DBox2{
+              display: none;
+            }
+            #legendBox{
+              display: none;
+            }
         }
         @media (max-width: 768px){
             .search-container {
                 width: 100%;
+            }
+        }
+         @media (max-width: 400px){
+             #cptitle{
+              display: none;
             }
         }
         /* Print Handling */
@@ -118,11 +132,12 @@
       #legendBox {
       position: absolute;
       bottom: 45px;
-      left: 10px;
+      left: 30px;
       z-index: 1001;
       background-color: white;
       padding: 8px;
       border: 1px solid #444444;
+       border-radius: 5px;
       width:260px;
       height:185px;
       }
@@ -197,10 +212,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-			<span>	<a  href="http://www.dvrpc.org" target="_new"><img class="dvrpclogo" style="margin:10px 0px 0px 20px" src="img/dvrpc_logo_small.png"/></a> 
-			<a  href="http://www.cyclephilly.org/" target="_new"><img  style="margin:5px 0px 0px 20px" src="img/cpheader_bike.png"/></a> 	
-            <a  href="http://www.cyclephilly.org/" target="_new"><img  style="margin:4px 0px 0px 5px" src="img/cpheader.png"/></a>      	
-	        <img  style="margin:4px 0px 0px 5px" src="img/cpsubheader_rd2.png"/>
+			<span><a  href="http://www.dvrpc.org" target="_new"><img class="dvrpclogo" style="margin:10px 0px 0px 20px" src="img/dvrpc_logo_small.png"/></a> 
+			      <a  href="http://www.cyclephilly.org/" target="_new"><img  style="margin:5px 0px 0px 20px" src="img/cpheader_bike.png"/></a> 	
+            <a  href="http://www.cyclephilly.org/" target="_new"><img id="cptitle" style="margin:4px 0px 0px 5px" src="img/cpheader.png"/></a><img  id="subheader" style="margin:4px 0px 0px 5px" src="img/cpsubheader_rd2.png"/>
 			</span> 
         </div>
 		
@@ -218,7 +232,9 @@
 					   <li  id="zoomToRegion"><a href="javascript:void(0);"><i class="icon-fullscreen"></i>&nbsp;&nbsp;Zoom To Full Extent</a></li>
 					   <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#legendModal').modal('show'); return false;"><i class="icon-list-alt"></i>&nbsp;&nbsp;Data Dictionary</a>
 					   </li>
-                        <li class="divider"></li>
+              <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#legend2Modal').modal('show'); return false;"><i class="glyphicon glyphicon-picture"></i>&nbsp;&nbsp;Show Legend</a>
+             </li>
+            <li class="divider"></li>
 						<li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#downloadModal').modal('show'); return false;"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;Download Data</a>
 					   </li>
                     </ul>
@@ -454,6 +470,27 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+  </div>
+
+     <div class="modal fade" id="legend2Modal">
+        <div class="modal-dialog"style="width:750px">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">CyclePhilly Map Legend</h4>
+                </div>
+                <div class="modal-body">
+        <div class="clearfix">
+        <p><img style="margin:4px 0px 0px 5px" src="img/all_legends.png"
+        </p>      
+        </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+  </div>
+
+
+    
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
