--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>DVRPC - CyclePhilly Data Summary (May-October 2014)</title>
+    <title>DVRPC - CyclePhilly Data Summary (May,2014 through April,2016)</title>
 
     <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" >
@@ -266,7 +266,7 @@
         <div id="legendBox"></div>	
 			  <div id="DBox2">
 			  <div class="expand-one"><i class="glyphicon glyphicon-minus"></i>&nbsp;&nbsp;About this Map</div> 
-			   <p class="content-one" >This map symbolizes total CyclePhilly trips by facility from May, 2014 through April, 2016<br> (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
+			   <p class="content-one" >This map symbolizes total CyclePhilly trips by facility from May,2014 through April,2016<br> (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
 
          <!-- Round 1(6 months; 8,340 individual trips by 220 unique CyclePhilly users). -->
 		   </div>	
@@ -453,12 +453,12 @@
         </li> <br>
 				<li class="left"><B>Trip by trip summary: </B><br><i>Line work for individual CyclePhilly trips</i></li>	
 				<li class="right">
-				<a href="http://www.dvrpc.org/webmaps/cyclephilly/data/tripbytrip_shp.zip"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;Shapefile<small style="opacity:0.6">&nbsp;&nbsp;[3.2 MB zip]&nbsp;&nbsp;</small></a>
-			  <a href="http://www.dvrpc.org/webmaps/cyclephilly/data/tripbytrip_geojson.zip"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;GeoJson<small style="opacity:0.6">&nbsp;&nbsp;[4.8 MB zip]</small></a>
+				<a href="http://www.dvrpc.org/webmaps/cyclephilly/data/tripbytrip_shp.zip"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;Shapefile<small style="opacity:0.6">&nbsp;&nbsp;[4.2 MB zip]&nbsp;&nbsp;</small></a>
+			  <a href="http://www.dvrpc.org/webmaps/cyclephilly/data/tripbytrip_geojson.zip"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;GeoJson<small style="opacity:0.6">&nbsp;&nbsp;[5.7 MB zip]</small></a>
 				</li>	<br>
         <li class="left"><B>Trip detail by segment: </B><br><i>Discrete trip data for each segment in the network</i></li>
         <li class="right">
-        <a href="http://www.dvrpc.org/webmaps/cyclephilly/data/trip_detail_shp.zip"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;Shapefile<small style="opacity:0.6">&nbsp;&nbsp;[27 MB zip]&nbsp;&nbsp;</small></a>
+        <a href="http://www.dvrpc.org/webmaps/cyclephilly/data/trip_detail_shp.zip"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;Shapefile<small style="opacity:0.6">&nbsp;&nbsp;[43 MB zip]&nbsp;&nbsp;</small></a>
         <a href="http://mapshaper.org/" target="_blank"><i class="glyphicon glyphicon-download-alt"></i>&nbsp;&nbsp;GeoJson (N/A)</a>
         </li><br><br>
 				<li class="left"><B>Segment network nodes: </B><br><i>Can be used with the above datasets to support spatial analysis</i></li>
