--- a/index.htm
+++ b/index.htm
@@ -111,6 +111,9 @@
         }
 	
 		 .navbar-inverse .navbar-nav > li > a {
+      color: rgb(255, 255, 255);
+      }
+      .navbar-inverse .navbar-nav > li > a:hover{
       color: rgb(200, 200, 200);
       }
       .modal-header {
@@ -131,8 +134,10 @@
 
       #legendBox {
       position: absolute;
-      bottom: 45px;
-      left: 30px;
+     /* bottom: 45px;
+      left: 30px; */
+      bottom: 25px;
+      right: 25px;
       z-index: 1001;
       background-color: white;
       padding: 8px;
@@ -144,8 +149,8 @@
       #DBox2 {
       position: absolute;
       background:#808080;
-      bottom: 25px;
-      right: 1px;
+      bottom: 45px;
+      left: 12px;
       z-index: 1001;
       width:350px;
       border: 1px solid #000;
@@ -220,7 +225,7 @@
 		
         <div id="layer_selector_main" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-			  <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="icon-question-sign" ></i>&nbsp;&nbsp;About</a></li>
+			  <li><a href="#" data-toggle="collapse" data-target=".navbar-collapse.in" onclick="$('#aboutModal').modal('show'); return false;"><i class="icon-info-sign" ></i>&nbsp;&nbsp;About</a></li>
 			  
                  <li class="dropdown">
                     <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
@@ -240,7 +245,7 @@
                     </ul>
                 </li>
 		  
-		  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list-alt"></i>&nbsp;Choose a Map</a>
+		  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-list-alt"></i>&nbsp;Choose a Trip Purpose<b class="caret"></b></a>
           <ul class="dropdown-menu" id="layer_selector" style="margin-right:15px;">
             <li id="purposemax" class="button purposemax selected" style="text-transform: none;">Most Popular Trip Purpose</li>
             <li id="ttrips" class="button ttrips" style="text-transform: none;">Total Trips</li>
