--- a/index.htm
+++ b/index.htm
@@ -160,7 +160,7 @@
       bottom: 45px;
       left: 12px;
       z-index: 1001;
-      width:350px;
+      width:280px;
       border: 1px solid #000;
       border-radius: 5px;
       padding: 1px 20px;
@@ -180,6 +180,7 @@
       }
       p.content-one {
       color: white;
+      font-size: 12px;
       }
       a.one {
       color:white;
