--- a/index.htm
+++ b/index.htm
@@ -295,7 +295,7 @@
         <div id="legendBox"></div>	
 			  <div id="DBox2">
 			  <div class="expand-one"><i class="glyphicon glyphicon-minus"></i>&nbsp;&nbsp;About this Map</div> 
-			   <p class="content-one" >This map symbolizes total CyclePhilly trips by facility from May,2014 through April,2016<br> (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
+			   <p class="content-one" >This map symbolizes total CyclePhilly trips by facility from May, 2014 through April, 2016 (2 years; 12,202 individual trips by 300 unique CyclePhilly users).<br><br>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</p>
 
          <!-- Round 1(6 months; 8,340 individual trips by 220 unique CyclePhilly users). -->
 		   </div>	
@@ -327,7 +327,7 @@
                 <div class="tab-pane fade active in" id="about">
                     <B><Font color=red>PLEASE NOTE:</FONT></B>
         						<p>
-        						This map symbolizes <b>total CyclePhilly trips</b> by facility <b>from May, 2014 to April, 2016 </b>, with most trips being logged during May to October promotion periods in 2014 and 2015. Raw CyclePhilly trip data was processed and snapped to the nearest road or trail segment using a special algorithm so that total volumes by segment could be calculated and compared (some facilities--particularly park trails--may not be in the mapped network; CyclePhilly data for these segments is not shown). Trip ends have been obscured to protect users' privacy. 
+        						This map symbolizes <b>total CyclePhilly trips</b> by facility <b>from May, 2014 through April, 2016</b>, with most trips being logged during May to October promotion periods in 2014 and 2015. Raw CyclePhilly trip data was processed and snapped to the nearest road or trail segment using a special algorithm so that total volumes by segment could be calculated and compared (some facilities--particularly park trails--may not be in the mapped network; CyclePhilly data for these segments is not shown). Trip ends have been obscured to protect users' privacy. 
                     <br><br><b>Note that this is a map of CyclePhilly trips, not a map of all bicycling in the city and region; CyclePhilly users' trip patterns may not reflect those of all cyclists.</b>
                     <br><br>
                     To access DVRPC's full pedestrian and bicycle counts portal, <a href="http://www.dvrpc.org/webmaps/pedbikecounts/" target="_new">click here</a>.<br>
@@ -472,7 +472,7 @@
                 </div>
                 <div class="modal-body">
 				<div class="clearfix">
-				<p>These datasets contain CyclePhilly trips <b>from May, 2014 to April, 2016</b> (2 years; 12,202 individual trips by 300 unique CyclePhilly users) that were mappable to DVRPC's Open Street Map facility network. CyclePhilly trip data was processed and snapped to the nearest road or trail segment using an algorithm so that total volumes by segment could be calculated and compared (some facilities--particularly trails--may not be in the mapped network; CyclePhilly data for these segments is not shown). <b> Note the data sets include only CyclePhilly trips; CyclePhilly users' trip patterns may not reflect those of all cyclists.</b> Trip ends (origin/destination) have been 'fuzzed' to protect users' privacy, so true start and stop locations are obscured in these datasets. Please refer to the descriptions below for information on the datasets; a data dictionary is also included within each ZIP file.
+				<p>These datasets contain CyclePhilly trips <b>from May, 2014 through April, 2016</b> (2 years; 12,202 individual trips by 300 unique CyclePhilly users) that were mappable to DVRPC's Open Street Map facility network. CyclePhilly trip data was processed and snapped to the nearest road or trail segment using an algorithm so that total volumes by segment could be calculated and compared (some facilities--particularly trails--may not be in the mapped network; CyclePhilly data for these segments is not shown). <b> Note the data sets include only CyclePhilly trips; CyclePhilly users' trip patterns may not reflect those of all cyclists.</b> Trip ends (origin/destination) have been 'fuzzed' to protect users' privacy, so true start and stop locations are obscured in these datasets. Please refer to the descriptions below for information on the datasets; a data dictionary is also included within each ZIP file.
 				</p>			
 			  <hr 75%>
         <li class="left"><B>Trip purpose summary by segment: </B><br><i>Aggregated/summarized data for each segment in the network</i></li> 
