--- a/index.htm
+++ b/index.htm
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
 	  <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="CyclePhilly is a smartphone app for recording bicycle trips. View total trips by facility and purpose from May, 2014 through April, 2016.">
+    <meta name="author" content="Delaware Valley Regional Planning Commission">     
+
     <title>DVRPC - CyclePhilly Data Summary (May,2014 through April,2016)</title>
+
+    <meta property="og:title" content="CyclePhilly Data Summary" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@DVRPC" />
+    <meta name="twitter:description" content="CyclePhilly is a smartphone app for recording bicycle trips. View total trips by facility and purpose from May, 2014 through April, 2016." />
+    <meta property="og:url" content="http://www.dvrpc.org/webmaps/cyclephilly/" />
+    <meta property="og:image" content="http://www.dvrpc.org/webmaps/cyclephilly/img/cyclephilly-app-social-card.png" />
 
     <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" >
